--- a/.github/workflows/build_nix.yml
+++ b/.github/workflows/build_nix.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - run: make nix
+    - run: ./res/ci/nixish_setup.sh && make nix
 
     - env:
         MKN_GCC_PREFERRED: 1
