--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,7 +7,7 @@ jobs:
   build:
       strategy:
         matrix:
-          os: [ubuntu-latest, windows-latest, macos-12, macos-latest]
+          os: [ubuntu-latest, windows-latest]
       runs-on: ${{ matrix.os }}
       steps:
         - uses: actions/checkout@v4
@@ -31,7 +31,7 @@ jobs:
             MKN_GCC_PREFERRED: 1
             KUL_GIT_CO: --depth 1
           run: |
-            make nix
+            ./res/ci/nixish_setup.sh && make nix
             KLOG=3 ./mkn build -dtKa "-std=c++17 -fPIC" -O 2 -g 0 -W 9 -o mkn_nix
 
         - if: matrix.os == 'ubuntu-latest'
@@ -54,7 +54,7 @@ jobs:
     container: quay.io/pypa/manylinux2014_x86_64
     steps:
     - uses: actions/checkout@v3
-    - run: make nix
+    - run: ./res/ci/nixish_setup.sh && make nix
     - env:
         MKN_GCC_PREFERRED: 1
         KUL_GIT_CO: --depth 1
@@ -70,7 +70,7 @@ jobs:
     runs-on: macos-12
     steps:
     - uses: actions/checkout@v4
-    - run: make bsd
+    - run: ./res/ci/nixish_setup.sh && make bsd
     - env:
         MKN_GCC_PREFERRED: 1
         KUL_GIT_CO: --depth 1
@@ -86,7 +86,7 @@ jobs:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v4
-    - run: make bsd
+    - run: ./res/ci/nixish_setup.sh && make bsd
     - env:
         MKN_GCC_PREFERRED: 1
         KUL_GIT_CO: --depth 1
