--- a/.github/workflows/build_nix.yml
+++ b/.github/workflows/build_nix.yml
@@ -12,16 +12,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
-    - name: dbg
-      run: |
-        set -x
-        ld -v
-        ldd --version
-        g++ -v
-
-    - run: make nix
+    - run: ./res/ci/nixish_setup.sh && make nix
 
     - env:
         MKN_GCC_PREFERRED: 1
@@ -32,8 +25,3 @@ jobs:
         KLOG=3 ./mkn build -Op test_mod -a "-std=c++17 -fPIC" -O 2 -g 0 -W 9
         KLOG=3 ./mkn build test pack -Op test -a "-std=c++17 -fPIC" -O 2 -g 0 -W 9
         ldd bin/build/mkn
-
-    - uses: actions/upload-artifact@v3
-      with:
-        name: mkn
-        path: bin/build/mkn
