--- a/.github/workflows/build_many_linux.yml
+++ b/.github/workflows/build_many_linux.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-20.04
-    container: quay.io/pypa/manylinux2014_x86_64
+    container: quay.io/pypa/manylinux_2_28_x86_64:latest
     steps:
     - uses: actions/checkout@v3
 
