--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,7 +51,7 @@ jobs:
 
   build_many_linux:
     runs-on: ubuntu-20.04
-    container: quay.io/pypa/manylinux2014_x86_64
+    container: quay.io/pypa/manylinux_2_28_x86_64:latest
     steps:
     - uses: actions/checkout@v3
     - run: ./res/ci/nixish_setup.sh && make nix
