--- a/mkn.yaml
+++ b/mkn.yaml
@@ -1,9 +1,9 @@
-#! clean build test -dtKOW 9 -g 0 -q
+#! clean build test -dtKOWg 0 -qw mkn.ram[https]
 
 name: mkn
 version: master
 property:
-  DATE: 21-AUG-2024
+  DATE: 15-SEP-2024
 
 parent: bin
 mode: none
