--- a/.github/workflows/build_nix.yml
+++ b/.github/workflows/build_nix.yml
@@ -25,4 +25,5 @@ jobs:
         KLOG=3 ./mkn build -Op test_mod -a "-std=c++17 -fPIC" -O 2 -g 0 -W 9
         KLOG=3 ./mkn build test pack -Op test -a "-std=c++17 -fPIC" -O 2 -g 0 -W 9
         KLOG=3 ./mkn build -dtOp format -a "-std=c++17 -fPIC" -O 2 -g 0 -W 9
+        KLOG=3 ./mkn -p lib_test
         ldd bin/build/mkn
