--- a/mkn.yaml
+++ b/mkn.yaml
@@ -3,7 +3,7 @@
 name: mkn
 version: master
 property:
-  DATE: 19-DEC-2024
+  DATE: 31-DEC-2024
   maiken_location: ${MKN_HOME}/app/mkn/${version}
   maiken_scm: https://github.com/mkn/mkn
   self.deps: mkn.kul
@@ -85,3 +85,10 @@ profile:
 
 - name: lib_test
   dep: mkn&${maiken_location}(${maiken_scm})[mod]
+
+
+- name: github
+  parent: headers
+  dep: parse.yaml
+  main: test/github/test.cpp
+  with: mkn.ram
