--- a/.github/workflows/build_nix.yml
+++ b/.github/workflows/build_nix.yml
@@ -10,7 +10,13 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, ubuntu-24.04-arm]
+        cc: [gcc, clang]
+
     steps:
     - uses: actions/checkout@v4
 
