--- a/.github/workflows/build_nix.yml
+++ b/.github/workflows/build_nix.yml
@@ -27,6 +27,7 @@ jobs:
         KUL_GIT_CO: --depth 1
       run: |
         ldd mkn
+        [ "${{ matrix.cc }}" = "clang" ] && export CC=clang CXX=clang++
         KLOG=3 ./mkn build -dtKa "-std=c++17 -fPIC" -O 2 -g 0 -W 9
         KLOG=3 ./mkn build -Op test_mod -a "-std=c++17 -fPIC" -O 2 -g 0 -W 9
         KLOG=3 ./mkn build test pack -Op test -a "-std=c++17 -fPIC" -O 2 -g 0 -W 9
