binaries on release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,6 +2,8 @@ name: Production Builds
 on:
   push:
     branches: [ master ]
+  release:
+    types: [published]
   workflow_dispatch:
 jobs:
   build:
