--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,6 +2,8 @@ name: Production Builds
 on:
   push:
     branches: [ master ]
+  release:
+    types: [published]
   workflow_dispatch:
 jobs:
   build:
@@ -81,24 +83,30 @@ jobs:
         path: bin/build/mkn_arm_osx
         retention-days: 1
 
-
-  release:
-    name: "Prelease"
+  finally:
+    name: "Release"
     needs: [build, build_many_linux, build_arm_macos]
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/download-artifact@v4.1.7
-      - name: Display fetched artifacts
-        run: ls -R
-      - name: Emit a Github Release
-        uses: "marvinpinto/action-automatic-releases@latest"
-        with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          automatic_release_tag: "latest"
-          prerelease: true
-          title: "Development Build"
-          files: |
-            maiken-windows-latest/mkn.exe
-            maiken-ubuntu-latest/mkn_nix
-            maiken-manylinux-latest/mkn_manylinux
-            maiken-macos-latest/mkn_arm_osx
+    - uses: actions/download-artifact@v5
+
+    - if: github.event_name != 'release'
+      uses: softprops/action-gh-release@v2
+      with:
+        name: latest
+        prerelease: true
+        tag_name: latest
+        files: |
+          maiken-windows-latest/mkn.exe
+          maiken-ubuntu-latest/mkn_nix
+          maiken-manylinux-latest/mkn_manylinux
+          maiken-macos-latest/mkn_arm_osx
+
+    - if: github.event_name == 'release'
+      uses: softprops/action-gh-release@v2
+      with:
+        files: |
+          maiken-windows-latest/mkn.exe
+          maiken-ubuntu-latest/mkn_nix
+          maiken-manylinux-latest/mkn_manylinux
+          maiken-macos-latest/mkn_arm_osx
