--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
             KUL_GIT_CO: --depth 1
           run: |
             bash -c ./res/ci/win_build.sh
-            mkn build -dtKOg 0 -a "-std:c++17 -EHsc"
+            mkn build -dtKOga "-std:c++17 -EHsc"
 
         - if: matrix.os == 'ubuntu-latest'
           env:
@@ -34,7 +34,7 @@ jobs:
             KUL_GIT_CO: --depth 1
           run: |
             ./res/ci/nixish_setup.sh && make nix
-            KLOG=3 ./mkn build -dtKa "-std=c++17 -fPIC" -O 2 -g 0 -W 9 -o mkn_nix
+            KLOG=3 ./mkn build -dtKa "-std=c++17 -fPIC" -O 2 -gW 9 -o mkn_nix
 
         - if: matrix.os == 'ubuntu-latest'
           uses: actions/upload-artifact@v4.4.0
@@ -60,7 +60,7 @@ jobs:
     - env:
         MKN_GCC_PREFERRED: 1
         KUL_GIT_CO: --depth 1
-      run: KLOG=3 ./mkn build -dtKa "-std=c++17 -fPIC" -O 2 -g 0 -W 9 -o mkn_manylinux
+      run: KLOG=3 ./mkn build -dtKa "-std=c++17 -fPIC" -O 2 -gW 9 -o mkn_manylinux
     - uses: actions/upload-artifact@v4.4.0
       with:
         name: maiken-manylinux-latest
@@ -76,7 +76,7 @@ jobs:
     - env:
         MKN_GCC_PREFERRED: 1
         KUL_GIT_CO: --depth 1
-      run: KLOG=3 ./mkn build -dtKa "-std=c++17 -fPIC" -O 2 -g 0 -W 9 -o mkn_arm_osx
+      run: KLOG=3 ./mkn build -dtKa "-std=c++17 -fPIC" -O 2 -gW 9 -o mkn_arm_osx
     - uses: actions/upload-artifact@v4.4.0
       with:
         name: maiken-macos-latest
