--- a/.github/workflows/build_nix.yml
+++ b/.github/workflows/build_nix.yml
@@ -26,6 +26,8 @@ jobs:
         MKN_GCC_PREFERRED: 1
       run: |
         ldd mkn
+        mkdir -p ~/.maiken/app/mkn
+        cp -r $PWD ~/.maiken/app/mkn/master
         [ "${{ matrix.cc }}" = "clang" ] && export CC=clang CXX=clang++
         KLOG=3 ./mkn build -dtKa "-std=c++17 -fPIC" -O 2 -g 0 -W 9
         KLOG=3 ./mkn build -Op test_mod -a "-std=c++17 -fPIC" -O 2 -g 0 -W 9
